Added HTML structure

--- a/index.html
+++ b/index.html
@@ -9,10 +9,44 @@
 </head>
 <body>
   <div class="container">
+    <div class="weather-app">
     <h1>
-        Hello World
+      London
     </h1>
-    <a href="" class="btn btn-primary">Click me</a>
+    <ul>
+      <li>
+        Friday 23:25
+      </li>
+      <li>
+        Cloudy
+      </li>
+    </ul>
+    
+    <div class="row">
+      <div class="col-6"></div>
+      <img src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png" 
+      alt="Cloudy"
+      />
+      18°C | °F 
+    </div>
+    <div class="col-6">
+      <ul>
+        <li>
+          Precipitation: 3%
+        </li>
+        <li>
+          Humidity: 83%
+        </li>
+        <li>
+          Wind: 8mph
+        </li>
+      </ul>
+    </div>
+    <small>
+      <a href="https://github.com/mahnazsamadi/vanilla-weather-app" target="_blank"
+      >Open-source code</a> by Mahnaz Samadi
+    </small>
+  </div>
   </div>
     <script src="src/app.js"></script>    
 </body>
