--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+   <link rel="stylesheet" href="src/style.css">
     <title>Weather App</title>
 </head>
 <body>
@@ -23,8 +23,8 @@
     </ul>
     
     <div class="row">
-      <div class="col-6"></div>
-      <img src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png" 
+      <div class="col-6">
+      <img src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
       alt="Cloudy"
       />
       18°C | °F 
