--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div class="container">
+    <div class="weather-app-wrapper">
     <div class="weather-app">
     <h1>
       London
@@ -24,11 +25,16 @@
     
     <div class="row">
       <div class="col-6">
+      <div class="clearfix weather-temperature">  
       <img src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
       alt="Cloudy"
+      class="float-left"
       />
-      18°C | °F 
+      <span class="float-left">
+       <strong>18</strong><span class="units">°C | <a href="#">°F</a></span>
+      </span>
     </div>
+   </div>
     <div class="col-6">
       <ul>
         <li>
@@ -42,7 +48,9 @@
         </li>
       </ul>
     </div>
-    <small>
+   </div>
+  </div>
+   <small>
       <a href="https://github.com/mahnazsamadi/vanilla-weather-app" target="_blank"
       >Open-source code</a> by Mahnaz Samadi
     </small>
