--- a/index.html
+++ b/index.html
@@ -5,22 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
    <link rel="stylesheet" href="src/style.css">
+   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Weather App</title>
 </head>
 <body>
   <div class="container">
     <div class="weather-app-wrapper">
     <div class="weather-app">
-    <h1>
-      London
-    </h1>
+    <h1 id="city"></h1>
     <ul>
       <li>
         Friday 23:25
       </li>
-      <li>
-        Cloudy
-      </li>
+      <li id="description"></li>
     </ul>
     
     <div class="row">
@@ -31,20 +28,17 @@
       class="float-left"
       />
       <span class="float-left">
-       <strong>18</strong><span class="units">°C | <a href="#">°F</a></span>
+       <strong id="temperature"></strong><span class="units">°C | <a href="#">°F</a></span>
       </span>
     </div>
    </div>
     <div class="col-6">
       <ul>
         <li>
-          Precipitation: 3%
+          Humidity: <span id="humidity"></span>%
         </li>
         <li>
-          Humidity: 83%
-        </li>
-        <li>
-          Wind: 8mph
+          Wind: <span id="wind"></span> Km/H
         </li>
       </ul>
     </div>
